# space_invaders

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: bullet.cpp  bullet.hpp  game_parameters.hpp  game_system.cpp  game_system.hpp  ship.cpp  ship.hpp
